[gd_scene load_steps=13 format=3 uid="uid://1eiawil14myx"]

[ext_resource type="Script" path="res://ingame_interface.gd" id="1_wtixd"]
[ext_resource type="Texture2D" uid="uid://dri4wxcrpjjhg" path="res://assets/weapons/AK_full.png" id="2_va673"]
[ext_resource type="Texture2D" uid="uid://d111uegdhq1tf" path="res://assets/weapons/fist.png" id="3_0wy4k"]
[ext_resource type="Texture2D" uid="uid://d4ab1eyoln7dk" path="res://assets/ui/pistol_icon.png" id="4_5n6fs"]
[ext_resource type="Texture2D" uid="uid://b05wf7q383cho" path="res://assets/ui/smg_icon.png" id="5_d2h61"]
[ext_resource type="Texture2D" uid="uid://cis6svuxlrjel" path="res://assets/ui/laser_icon.png" id="6_dbrgh"]
[ext_resource type="Texture2D" uid="uid://7hreo0ghfrd" path="res://assets/ui/player_icon.png" id="7_35rhp"]
[ext_resource type="Texture2D" uid="uid://sdwo3jth1d35" path="res://assets/ui/grenade_icon.png" id="7_g8ff5"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_b0qwp"]
color = Color(0.340339, 0.340339, 0.340339, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sruer"]
bg_color = Color(0.937255, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6npd"]
bg_color = Color(0.113725, 0.647059, 0.890196, 0.101961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cenq1"]
bg_color = Color(0.0363013, 0.239566, 0.541154, 1)

[node name="Game Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wtixd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1296.0
offset_top = 15.0
offset_right = 1905.0
offset_bottom = 108.0
color = Color(0.376471, 1, 0.984314, 0.52549)

[node name="Score" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 452.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 60
text = "SCORE:"

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1296.0
offset_top = 121.0
offset_right = 1905.0
offset_bottom = 196.0
color = Color(0.376471, 1, 0.984314, 0.52549)

[node name="Distance" type="Label" parent="ColorRect3"]
layout_mode = 0
offset_left = 13.0
offset_top = 3.0
offset_right = 576.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 48
text = "DISTANCE:"

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 56.0
offset_right = 835.0
offset_bottom = 126.0
theme_override_styles/background = SubResource("StyleBoxLine_b0qwp")
theme_override_styles/fill = SubResource("StyleBoxFlat_sruer")
value = 100.0
show_percentage = false

[node name="Health" type="Label" parent="HealthBar"]
layout_mode = 0
offset_left = 251.0
offset_top = 12.0
offset_right = 373.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 32
text = "100/100"

[node name="PowerupBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 138.0
offset_right = 835.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 24
theme_override_styles/background = SubResource("StyleBoxFlat_l6npd")
theme_override_styles/fill = SubResource("StyleBoxFlat_cenq1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 833.0
offset_bottom = -21.0
grow_vertical = 0
theme_override_constants/separation = 24

[node name="Weapon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_va673")
expand_mode = 3

[node name="Ammo" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Ammo: 
"
vertical_alignment = 1

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1545.0
offset_top = 212.0
offset_right = 1898.0
offset_bottom = 573.0
color = Color(0.376471, 1, 0.984314, 0.52549)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2

[node name="Melee" type="HBoxContainer" parent="ColorRect4/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="ColorRect4/VBoxContainer/Melee"]
layout_mode = 2
texture = ExtResource("3_0wy4k")
expand_mode = 2

[node name="ColorRect" type="ColorRect" parent="ColorRect4/VBoxContainer/Melee/TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 42.0
grow_vertical = 0
color = Color(0.144063, 0.144063, 0.144063, 1)

[node name="Label" type="Label" parent="ColorRect4/VBoxContainer/Melee/TextureRect/ColorRect"]
layout_mode = 0
offset_left = 5.0
offset_top = -4.0
offset_right = 45.0
offset_bottom = 19.0
text = "TAB"

[node name="Label" type="Label" parent="ColorRect4/VBoxContainer/Melee"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "∞"

[node name="Pistol" type="HBoxContainer" parent="ColorRect4/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="ColorRect4/VBoxContainer/Pistol"]
layout_mode = 2
texture = ExtResource("4_5n6fs")
expand_mode = 3

[node name="ColorRect" type="ColorRect" parent="ColorRect4/VBoxContainer/Pistol/TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 20.0
grow_vertical = 0
color = Color(0.144063, 0.144063, 0.144063, 1)

[node name="Label" type="Label" parent="ColorRect4/VBoxContainer/Pistol/TextureRect/ColorRect"]
layout_mode = 0
offset_left = 6.0
offset_top = -4.0
offset_right = 17.0
offset_bottom = 19.0
text = "1"

[node name="Pistol Ammo" type="Label" parent="ColorRect4/VBoxContainer/Pistol"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "∞"
horizontal_alignment = 2

[node name="SMG" type="HBoxContainer" parent="ColorRect4/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="ColorRect4/VBoxContainer/SMG"]
layout_mode = 2
texture = ExtResource("5_d2h61")
expand_mode = 3

[node name="ColorRect" type="ColorRect" parent="ColorRect4/VBoxContainer/SMG/TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 21.0
grow_vertical = 0
color = Color(0.144063, 0.144063, 0.144063, 1)

[node name="Label" type="Label" parent="ColorRect4/VBoxContainer/SMG/TextureRect/ColorRect"]
layout_mode = 0
offset_left = 5.0
offset_top = -4.0
offset_right = 45.0
offset_bottom = 19.0
text = "2"

[node name="SMG Ammo" type="Label" parent="ColorRect4/VBoxContainer/SMG"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "∞"

[node name="Laser Rifle" type="HBoxContainer" parent="ColorRect4/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="ColorRect4/VBoxContainer/Laser Rifle"]
layout_mode = 2
texture = ExtResource("6_dbrgh")
expand_mode = 3

[node name="ColorRect" type="ColorRect" parent="ColorRect4/VBoxContainer/Laser Rifle/TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 23.0
grow_vertical = 0
color = Color(0.144063, 0.144063, 0.144063, 1)

[node name="Label" type="Label" parent="ColorRect4/VBoxContainer/Laser Rifle/TextureRect/ColorRect"]
layout_mode = 0
offset_left = 5.0
offset_top = -4.0
offset_right = 21.0
offset_bottom = 19.0
text = "3"

[node name="Laser Ammo" type="Label" parent="ColorRect4/VBoxContainer/Laser Rifle"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "∞"

[node name="Grenade Launcher" type="HBoxContainer" parent="ColorRect4/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="ColorRect4/VBoxContainer/Grenade Launcher"]
layout_mode = 2
texture = ExtResource("7_g8ff5")
expand_mode = 3

[node name="ColorRect" type="ColorRect" parent="ColorRect4/VBoxContainer/Grenade Launcher/TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 24.0
grow_vertical = 0
color = Color(0.144063, 0.144063, 0.144063, 1)

[node name="Label" type="Label" parent="ColorRect4/VBoxContainer/Grenade Launcher/TextureRect/ColorRect"]
layout_mode = 0
offset_left = 5.0
offset_top = -4.0
offset_right = 22.0
offset_bottom = 19.0
text = "4"

[node name="Grenade Ammo" type="Label" parent="ColorRect4/VBoxContainer/Grenade Launcher"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "∞"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 230.0
offset_bottom = 218.0
texture = ExtResource("7_35rhp")
expand_mode = 1

[node name="ColorRect5" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 171.0
offset_top = 163.0
offset_right = 261.0
offset_bottom = 192.0
color = Color(0.223103, 0.223103, 0.223103, 1)

[node name="Player_Level" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 176.0
offset_top = 164.0
offset_right = 259.0
offset_bottom = 195.0
theme_override_font_sizes/font_size = 24
text = "Lvl"
